[gd_scene load_steps=5 format=3 uid="uid://cx5tqqwvb5tyc"]

[ext_resource type="Theme" uid="uid://cwy2cn6v5ovu3" path="res://Theme/ThemeCustom.tres" id="1_5606g"]
[ext_resource type="Script" path="res://Menus/MainMenu/MainMenu.gd" id="1_vk5ut"]
[ext_resource type="Texture2D" uid="uid://shmvrxrcqhjk" path="res://Sprites/Menu/splashart.png" id="3_r21tp"]

[sub_resource type="GDScript" id="GDScript_cxd8h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5606g")
script = ExtResource("1_vk5ut")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r21tp")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 410.0
offset_top = -221.0
offset_right = 513.0
offset_bottom = -113.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"
script = SubResource("GDScript_cxd8h")

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="onStartButtonPressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="onTutorialButtonPressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="onLeaderboardPressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="onQuitButtonPressed"]
